--- a/package.json
+++ b/package.json
@@ -5,11 +5,54 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "lint": "eslint --ext .jsx,.js ./",
+    "start": "next start",
+    "pre-commit": "yarn lint",
+    "pre-push": "yarn test",
+    "post-merge": "yarn install",
+    "post-rewrite": "yarn install"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "firebase": "^7.10.0",
+    "js-cookie": "^2.2.1",
+    "lodash": "^4.17.15",
+    "mitt": "^1.2.0",
     "next": "9.4.4",
+    "nprogress": "^0.2.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-icons": "^3.10.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.2.9",
+    "@types/node": "^13.7.7",
+    "@types/react": "^16.9.23",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-styled-components": "^1.10.7",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "husky": "^4.2.3",
+    "prettier": "^1.19.1",
+    "prop-types": "^15.7.2",
+    "typescript": "^3.8.3"
   }
 }
