--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "husky": "^4.2.3",
+    "lint-staged": "^10.2.11",
     "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
     "typescript": "^3.8.3"
