--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.15",
     "mitt": "^1.2.0",
     "next": "9.4.4",
+    "notistack": "^0.9.17",
     "nprogress": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
