feat: now users can press ENTER to create team or join team also can copy the team code, improve code and split styles in user task component

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "nprogress": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-icons": "^3.10.0"
+    "react-icons": "^3.10.0",
+    "use-clipboard-copy": "^0.1.2"
   },
   "husky": {
     "hooks": {
